--- a/platform/ui/src/components/LegacySidePanel/style.css
+++ b/platform/ui/src/components/LegacySidePanel/style.css
@@ -25,3 +25,72 @@
   pointer-events: none;
   opacity: 0.6;
 }
+
+.slider_screen {
+  display: none;
+}
+
+.report_area {
+  height: calc(100vh - 330px);
+}
+
+.img_section {
+  height: calc(100vh - 50px);
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.pulse {
+  animation: pulse 0.5s infinite;
+}
+
+@media (max-width: 767px) {
+  .middle_img {
+    height: 0px;
+  }
+  .left_side {
+    max-width: unset !important;
+    width: 100% !important;
+    margin: unset !important;
+  }
+  .top_bar {
+    overflow: auto;
+  }
+  .slider_screen {
+    bottom: 3px;
+    display: block !important;
+  }
+  .report_area {
+    height: calc(100vh - 370px);
+  }
+  .img_section {
+    height: calc(100vh - 150px);
+  }
+  .slider_screen input[type='range']::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 12px;
+    background: #a6a6a6;
+  }
+  .slider_screen input[type='range']::-webkit-slider-thumb {
+    border: 2px solid #f8fbfd;
+    height: 30px;
+    width: 30px;
+    border-radius: 4px;
+    background-color: #f8fbfd;
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -10px;
+    padding: 10px;
+    background-clip: content-box;
+  }
+}
